--- a/evals/snakemake_config.yaml
+++ b/evals/snakemake_config.yaml
@@ -8,7 +8,7 @@ art_bin_path: art_illumina
 vargas_bin_path: /home/pesho/libs/vargas/bin/vargas
 
 # aligners
-astarix_bin_path:      /home/pesho/astarix/release/astarix
+astarix_bin_path:      ../release/astarix
 graphaligner_bin_path: Aligner
 vg_bin_path:           vg
 pasgal_bin_path:       PaSGAL
