--- a/evals/snakemake_config.yaml
+++ b/evals/snakemake_config.yaml
@@ -5,11 +5,11 @@ bcalm_convert_path: convertToGFA.py
 #pbsim_bin_path: pbsim
 #pbsim_config_path: /home/pesho/libs/PBSIM-PacBio-Simulator/data/model_qc_clr
 art_bin_path: art_illumina
-vargas_bin_path: /home/pesho/libs/vargas/bin/vargas
+vargas_bin_path: vargas
 
 # aligners
-astarix_bin_path:      ../release/astarix
-graphaligner_bin_path: Aligner
+astarix_bin_path:      astarix
+graphaligner_bin_path: GraphAligner
 vg_bin_path:           vg
 pasgal_bin_path:       PaSGAL
 
